MULTISITE-515 latest test on standard

--- a/sites/all/modules/features/custom/contact_form/selenium/ts/sendEmailAdmin.html
+++ b/sites/all/modules/features/custom/contact_form/selenium/ts/sendEmailAdmin.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_tbr/en</td>
+	<td>/multisite_drupal_test/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -24,7 +24,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin</td>
+	<td>administrator</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -61,7 +61,6 @@
 	<td>id=edit-submit</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
