--- a/sites/all/modules/features/custom/e_library/selenium/ts/propose.html
+++ b/sites/all/modules/features/custom/e_library/selenium/ts/propose.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_tbr3/en</td>
+	<td>/multisite_drupal_test/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -69,7 +69,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-field-document-und-0-upload</td>
-	<td>F:\samples\document_example.txt</td>
+	<td>D:\multisite doc\test standard\elibrary\document_example.txt</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
