--- a/sites/all/modules/features/custom/ec_profiles/selenium/tc/manage_fields.html
+++ b/sites/all/modules/features/custom/ec_profiles/selenium/tc/manage_fields.html
@@ -11,14 +11,10 @@
 <thead>
 <tr><td rowspan="1" colspan="3">as admin</td></tr>
 </thead><tbody>
+<!--Fisrt create a authenticated user user_profil1 and user_profil2. Ensure you have activated the feature EC profile and not be log in.-->
 <tr>
 	<td>open</td>
 	<td>/multisite_drupal_wde/</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Log out</td>
 	<td></td>
 </tr>
 <tr>
