--- a/sites/all/modules/features/custom/ec_profiles/selenium/tc/view_profile.html
+++ b/sites/all/modules/features/custom/ec_profiles/selenium/tc/view_profile.html
@@ -99,7 +99,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-uid-1</td>
-	<td>user_pr1</td>
+	<td>user_profil1</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -108,7 +108,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=user_pr1</td>
+	<td>link=user_profil1</td>
 	<td></td>
 </tr>
 <tr>
