--- a/sites/all/modules/features/custom/events/selenium/test_standard.html
+++ b/sites/all/modules/features/custom/events/selenium/test_standard.html
@@ -8,10 +8,10 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="ts/init.html">init</a></td></tr>
-<tr><td><a href="ts/propose.html">propose</a></td></tr>
-<tr><td><a href="ts/manage.html">manage</a></td></tr>
-<tr><td><a href="ts/browse.html">browse</a></td></tr>
+<tr><td><a href="../../f_a_q/selenium/tc/create.html">create</a></td></tr>
+<tr><td><a href="../../f_a_q/selenium/tc/read.html">read</a></td></tr>
+<tr><td><a href="../../f_a_q/selenium/tc/update.html">update</a></td></tr>
+<tr><td><a href="../../f_a_q/selenium/tc/delete.html">delete</a></td></tr>
 </tbody></table>
 </body>
 </html>
