--- a/sites/all/modules/features/custom/f_a_q/selenium/tc/create.html
+++ b/sites/all/modules/features/custom/f_a_q/selenium/tc/create.html
@@ -11,11 +11,7 @@
 <thead>
 <tr><td rowspan="1" colspan="3">create</td></tr>
 </thead><tbody>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Log out</td>
-	<td></td>
-</tr>
+<!--Ensure you have activated the feature faq and you are not log in at the beginning of the test-->
 <tr>
 	<td>clickAndWait</td>
 	<td>link=login</td>
@@ -24,7 +20,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin</td>
+	<td>administrator</td>
 </tr>
 <tr>
 	<td>type</td>
