--- a/sites/all/modules/features/custom/f_a_q/selenium/tc/delete.html
+++ b/sites/all/modules/features/custom/f_a_q/selenium/tc/delete.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/mumultisite_drupal_tbr</td>
+	<td>/mumultisite_drupal_test</td>
 	<td></td>
 </tr>
 <tr>
@@ -29,7 +29,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin</td>
+	<td>administrator</td>
 </tr>
 <tr>
 	<td>type</td>
