--- a/sites/all/modules/features/custom/sitemap/selenium/ts/browse.html
+++ b/sites/all/modules/features/custom/sitemap/selenium/ts/browse.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/mumultisite_drupal_tbr/en</td>
+	<td>/multisite_drupal_test/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -22,11 +22,10 @@
 	<td></td>
 </tr>
 <tr>
-	<td>highlight</td>
+	<td>verifyElementPresent</td>
 	<td>//body[contains(@class,'page-sitemap')]</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
