--- a/sites/all/modules/features/custom/survey/selenium/ts/init.html
+++ b/sites/all/modules/features/custom/survey/selenium/ts/init.html
@@ -11,9 +11,10 @@
 <thead>
 <tr><td rowspan="1" colspan="3">init</td></tr>
 </thead><tbody>
+<!--Ensure you have activated the feature Survey-->
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_test/en</td>
 	<td></td>
 </tr>
 <tr>
