--- a/sites/all/modules/features/custom/contact_form/selenium/ts/CheckPreFilledAdmin.html
+++ b/sites/all/modules/features/custom/contact_form/selenium/ts/CheckPreFilledAdmin.html
@@ -24,7 +24,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin</td>
+	<td>administrator</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -38,7 +38,7 @@
 </tr>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_tbr/en#</td>
+	<td>/multisite_drupal_test/en#</td>
 	<td></td>
 </tr>
 <tr>
@@ -49,12 +49,12 @@
 <tr>
 	<td>assertValue</td>
 	<td>id=edit-name</td>
-	<td>admin</td>
+	<td>administrator</td>
 </tr>
 <tr>
 	<td>assertValue</td>
 	<td>id=edit-mail</td>
-	<td>admin@example.com</td>
+	<td>administrator@test.com</td>
 </tr>
 </tbody></table>
 </body>
