--- a/sites/all/modules/features/custom/fat_footer/selenium/ts/checkFatFooterExists.html
+++ b/sites/all/modules/features/custom/fat_footer/selenium/ts/checkFatFooterExists.html
@@ -11,12 +11,12 @@
 <thead>
 <tr><td rowspan="1" colspan="3">checkFatFooterExist</td></tr>
 </thead><tbody>
+<!--Ensure you have Activated the feature Fat footer as administrator-->
 <tr>
 	<td>verifyElementPresent</td>
 	<td>xpath=//div[@class='fat_footer_item'] </td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
