--- a/sites/all/modules/features/custom/links/selenium/ts/init.html
+++ b/sites/all/modules/features/custom/links/selenium/ts/init.html
@@ -12,8 +12,13 @@
 <tr><td rowspan="1" colspan="3">init</td></tr>
 </thead><tbody>
 <tr>
+	<td>Ensure you have activated the feature Links.</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_test/en</td>
 	<td></td>
 </tr>
 <tr>
