--- a/sites/all/modules/features/custom/sitemap/selenium/ts/init.html
+++ b/sites/all/modules/features/custom/sitemap/selenium/ts/init.html
@@ -11,9 +11,10 @@
 <thead>
 <tr><td rowspan="1" colspan="3">Init</td></tr>
 </thead><tbody>
+<!--Ensure you have activated the feature site map-->
 <tr>
 	<td>open</td>
-	<td>/mumultisite_drupal_tbr/en/sitemap</td>
+	<td>/multisite_drupal_test/en/sitemap</td>
 	<td></td>
 </tr>
 <tr>
@@ -21,7 +22,6 @@
 	<td>link=Home</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
