--MULTISITE-1273 Add icons to font

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -20,7 +20,7 @@
 		padding: 0;
 	}
 	.glyph {
-		font-size: 16px;
+		font-size: 14px;
 		float: left;
 		text-align: center;
 		background: #eee;
@@ -71,7 +71,7 @@
 	}
 	a:hover, a:focus {color: #000;}
 	.box1 {
-		font-size: 16px;
+		font-size: 14px;
 		display: inline-block;
 		width: 15em;
 		padding: .25em .5em;
@@ -88,92 +88,100 @@
 		<p>The generated SVG font can be imported back to <a href="http://icomoon.io/app">IcoMoon</a> for modification.</p>
 	</header>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe015;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe014;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe014;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe013;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe013;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe012;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe012;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe011;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe011;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe010;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe010;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00f;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00f;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00e;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00e;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00d;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00d;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00c;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00c;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00b;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00b;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00a;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00a;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe009;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe009;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe008;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe008;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe007;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe007;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe006;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe006;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe005;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe001;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe004;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe002;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe002;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe000;" />
 	</div>
 	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xe003;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe003;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe000;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe002;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe002;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe004;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe001;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe005;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe006;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe006;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe007;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe007;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe008;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe008;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe009;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe009;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00a;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00a;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00b;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00b;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00c;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00c;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00d;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00d;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00e;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00e;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00f;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00f;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe010;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe010;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe011;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe011;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe012;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe012;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe013;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe013;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe014;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe014;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe015;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe016;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe016;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf0e6;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf0e6;" />
 	</div>
 	</section>
 	<div class="clear"></div>
@@ -182,92 +190,100 @@
 		<h1>CSS Class Names</h1>
 	</header>
 	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-vcard"></span>
-		&nbsp;multisite-icon-vcard
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-checkbox"></span>
-		&nbsp;multisite-icon-checkbox
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-thumbs-up"></span>
-		&nbsp;multisite-icon-thumbs-up
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-share"></span>
-		&nbsp;multisite-icon-share
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-light-bulb"></span>
-		&nbsp;multisite-icon-light-bulb
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-mail"></span>
-		&nbsp;multisite-icon-mail
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-directions"></span>
-		&nbsp;multisite-icon-directions
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-code"></span>
-		&nbsp;multisite-icon-code
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-list"></span>
-		&nbsp;multisite-icon-list
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-publish"></span>
-		&nbsp;multisite-icon-publish
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-language"></span>
-		&nbsp;multisite-icon-language
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-pictures"></span>
-		&nbsp;multisite-icon-pictures
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-archive"></span>
-		&nbsp;multisite-icon-archive
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-paperplane"></span>
-		&nbsp;multisite-icon-paperplane
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-megaphone"></span>
-		&nbsp;multisite-icon-megaphone
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-feed"></span>
-		&nbsp;multisite-icon-feed
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-question"></span>
-		&nbsp;multisite-icon-question
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-link"></span>
-		&nbsp;multisite-icon-link
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-earth"></span>
-		&nbsp;multisite-icon-earth
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-copy"></span>
-		&nbsp;multisite-icon-copy
+		<span aria-hidden="true" class="multisite-icon-calendar"></span>
+		&nbsp;multisite-icon-calendar
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-book"></span>
 		&nbsp;multisite-icon-book
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-calendar"></span>
-		&nbsp;multisite-icon-calendar
+		<span aria-hidden="true" class="multisite-icon-copy"></span>
+		&nbsp;multisite-icon-copy
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-earth"></span>
+		&nbsp;multisite-icon-earth
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-link"></span>
+		&nbsp;multisite-icon-link
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-question"></span>
+		&nbsp;multisite-icon-question
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-feed"></span>
+		&nbsp;multisite-icon-feed
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-megaphone"></span>
+		&nbsp;multisite-icon-megaphone
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-paperplane"></span>
+		&nbsp;multisite-icon-paperplane
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-archive"></span>
+		&nbsp;multisite-icon-archive
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-pictures"></span>
+		&nbsp;multisite-icon-pictures
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-language"></span>
+		&nbsp;multisite-icon-language
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-publish"></span>
+		&nbsp;multisite-icon-publish
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-list"></span>
+		&nbsp;multisite-icon-list
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-code"></span>
+		&nbsp;multisite-icon-code
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-directions"></span>
+		&nbsp;multisite-icon-directions
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-mail"></span>
+		&nbsp;multisite-icon-mail
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-light-bulb"></span>
+		&nbsp;multisite-icon-light-bulb
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-share"></span>
+		&nbsp;multisite-icon-share
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-thumbs-up"></span>
+		&nbsp;multisite-icon-thumbs-up
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-checkbox"></span>
+		&nbsp;multisite-icon-checkbox
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-vcard"></span>
+		&nbsp;multisite-icon-vcard
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-flow-branch"></span>
+		&nbsp;multisite-icon-flow-branch
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-comments-alt"></span>
+		&nbsp;multisite-icon-comments-alt
 	</span>
 	</section>
 	<footer>
