--MULTISITE-1275 Use font icon for recently added block

--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -88,100 +88,112 @@
 		<p>The generated SVG font can be imported back to <a href="http://icomoon.io/app">IcoMoon</a> for modification.</p>
 	</header>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe000;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe003;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe003;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe002;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe002;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe004;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe001;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe005;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe006;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe006;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe007;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe007;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe008;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe008;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe009;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe009;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00a;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00a;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00b;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00b;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00c;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00c;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00d;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00d;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00e;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00e;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00f;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00f;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe010;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe010;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe011;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe011;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe012;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe012;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe013;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe013;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe014;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe014;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe015;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xf0e6;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf0e6;" />
 	</div>
 	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xe016;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xe016;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xf0e6;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xf0e6;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe015;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe013;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe013;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe012;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe012;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe011;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe011;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe010;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe010;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00f;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00f;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00e;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00e;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00c;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00c;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00b;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00b;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00a;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00a;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe009;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe009;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe008;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe008;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe007;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe007;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe006;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe006;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe005;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe001;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe004;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf046;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf046;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf016;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf016;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe017;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe017;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf073;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf073;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf02d;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf02d;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf044;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf044;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf0c0;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf0c0;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf0c9;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf0c9;" />
 	</div>
 	</section>
 	<div class="clear"></div>
@@ -189,6 +201,94 @@
 	<header>
 		<h1>CSS Class Names</h1>
 	</header>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-comments-alt"></span>
+		&nbsp;multisite-icon-comments-alt
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-flow-branch"></span>
+		&nbsp;multisite-icon-flow-branch
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-vcard"></span>
+		&nbsp;multisite-icon-vcard
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-thumbs-up"></span>
+		&nbsp;multisite-icon-thumbs-up
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-share"></span>
+		&nbsp;multisite-icon-share
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-light-bulb"></span>
+		&nbsp;multisite-icon-light-bulb
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-mail"></span>
+		&nbsp;multisite-icon-mail
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-directions"></span>
+		&nbsp;multisite-icon-directions
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-code"></span>
+		&nbsp;multisite-icon-code
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-publish"></span>
+		&nbsp;multisite-icon-publish
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-language"></span>
+		&nbsp;multisite-icon-language
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-pictures"></span>
+		&nbsp;multisite-icon-pictures
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-archive"></span>
+		&nbsp;multisite-icon-archive
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-paperplane"></span>
+		&nbsp;multisite-icon-paperplane
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-megaphone"></span>
+		&nbsp;multisite-icon-megaphone
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-feed"></span>
+		&nbsp;multisite-icon-feed
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-question"></span>
+		&nbsp;multisite-icon-question
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-link"></span>
+		&nbsp;multisite-icon-link
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-earth"></span>
+		&nbsp;multisite-icon-earth
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-check"></span>
+		&nbsp;multisite-icon-check
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-file"></span>
+		&nbsp;multisite-icon-file
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-newspaper"></span>
+		&nbsp;multisite-icon-newspaper
+	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-calendar"></span>
 		&nbsp;multisite-icon-calendar
@@ -198,92 +298,16 @@
 		&nbsp;multisite-icon-book
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-copy"></span>
-		&nbsp;multisite-icon-copy
+		<span aria-hidden="true" class="multisite-icon-edit"></span>
+		&nbsp;multisite-icon-edit
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-earth"></span>
-		&nbsp;multisite-icon-earth
+		<span aria-hidden="true" class="multisite-icon-group"></span>
+		&nbsp;multisite-icon-group
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-link"></span>
-		&nbsp;multisite-icon-link
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-question"></span>
-		&nbsp;multisite-icon-question
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-feed"></span>
-		&nbsp;multisite-icon-feed
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-megaphone"></span>
-		&nbsp;multisite-icon-megaphone
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-paperplane"></span>
-		&nbsp;multisite-icon-paperplane
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-archive"></span>
-		&nbsp;multisite-icon-archive
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-pictures"></span>
-		&nbsp;multisite-icon-pictures
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-language"></span>
-		&nbsp;multisite-icon-language
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-publish"></span>
-		&nbsp;multisite-icon-publish
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-list"></span>
-		&nbsp;multisite-icon-list
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-code"></span>
-		&nbsp;multisite-icon-code
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-directions"></span>
-		&nbsp;multisite-icon-directions
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-mail"></span>
-		&nbsp;multisite-icon-mail
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-light-bulb"></span>
-		&nbsp;multisite-icon-light-bulb
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-share"></span>
-		&nbsp;multisite-icon-share
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-thumbs-up"></span>
-		&nbsp;multisite-icon-thumbs-up
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-checkbox"></span>
-		&nbsp;multisite-icon-checkbox
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-vcard"></span>
-		&nbsp;multisite-icon-vcard
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-flow-branch"></span>
-		&nbsp;multisite-icon-flow-branch
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-comments-alt"></span>
-		&nbsp;multisite-icon-comments-alt
+		<span aria-hidden="true" class="multisite-icon-reorder"></span>
+		&nbsp;multisite-icon-reorder
 	</span>
 	</section>
 	<footer>
