--- a/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
+++ b/sites/all/modules/custom/multisite_drupal_toolbox/icons/index.html
@@ -20,7 +20,7 @@
 		padding: 0;
 	}
 	.glyph {
-		font-size: 14px;
+		font-size: 16px;
 		float: left;
 		text-align: center;
 		background: #eee;
@@ -71,7 +71,7 @@
 	}
 	a:hover, a:focus {color: #000;}
 	.box1 {
-		font-size: 14px;
+		font-size: 16px;
 		display: inline-block;
 		width: 15em;
 		padding: .25em .5em;
@@ -88,108 +88,116 @@
 		<p>The generated SVG font can be imported back to <a href="http://icomoon.io/app">IcoMoon</a> for modification.</p>
 	</header>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xf0e6;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xf0e6;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe016;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe016;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe015;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe013;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe013;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe012;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe012;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe011;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe011;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe010;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe010;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00f;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00f;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00e;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00e;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00c;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00c;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00b;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00b;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe00a;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe00a;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe009;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe009;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe008;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe008;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe007;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe007;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe006;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe006;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe005;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe001;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe004;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xf046;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xf046;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xf016;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xf016;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xe017;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xe017;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xf073;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xf073;" />
-	</div>
-	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xf02d;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xf02d;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xf0c0;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf0c0;" />
 	</div>
 	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xf044;"></div>
 		<input type="text" readonly="readonly" value="&amp;#xf044;" />
 	</div>
 	<div class="glyph">
-		<div class="fs1" aria-hidden="true" data-icon="&#xf0c0;"></div>
-		<input type="text" readonly="readonly" value="&amp;#xf0c0;" />
+		<div class="fs1" aria-hidden="true" data-icon="&#xf02d;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf02d;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf073;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf073;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe017;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe017;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf016;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf016;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf046;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf046;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe004;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe004;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe001;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe001;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe005;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe005;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe006;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe006;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe007;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe007;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe008;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe008;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe009;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe009;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00a;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00a;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00b;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00b;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00c;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00c;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00e;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00e;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe00f;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe00f;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe010;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe010;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe011;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe011;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe012;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe012;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe013;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe013;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe015;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe015;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe016;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe016;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xf0e6;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xf0e6;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe000;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe000;" />
+	</div>
+	<div class="glyph">
+		<div class="fs1" aria-hidden="true" data-icon="&#xe002;"></div>
+		<input type="text" readonly="readonly" value="&amp;#xe002;" />
 	</div>
 	<div class="glyph">
 		<div class="fs1" aria-hidden="true" data-icon="&#xf0c9;"></div>
@@ -199,111 +207,119 @@
 	<div class="clear"></div>
 	<section class="mtm clearfix" id="glyphs">
 	<header>
-		<h1>CSS Class Names</h1>
+		<h1>Class Names</h1>
 	</header>
 	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-comments-alt"></span>
-		&nbsp;multisite-icon-comments-alt
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-flow-branch"></span>
-		&nbsp;multisite-icon-flow-branch
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-vcard"></span>
-		&nbsp;multisite-icon-vcard
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-thumbs-up"></span>
-		&nbsp;multisite-icon-thumbs-up
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-share"></span>
-		&nbsp;multisite-icon-share
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-light-bulb"></span>
-		&nbsp;multisite-icon-light-bulb
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-mail"></span>
-		&nbsp;multisite-icon-mail
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-directions"></span>
-		&nbsp;multisite-icon-directions
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-code"></span>
-		&nbsp;multisite-icon-code
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-publish"></span>
-		&nbsp;multisite-icon-publish
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-language"></span>
-		&nbsp;multisite-icon-language
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-pictures"></span>
-		&nbsp;multisite-icon-pictures
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-archive"></span>
-		&nbsp;multisite-icon-archive
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-paperplane"></span>
-		&nbsp;multisite-icon-paperplane
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-megaphone"></span>
-		&nbsp;multisite-icon-megaphone
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-feed"></span>
-		&nbsp;multisite-icon-feed
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-question"></span>
-		&nbsp;multisite-icon-question
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-link"></span>
-		&nbsp;multisite-icon-link
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-earth"></span>
-		&nbsp;multisite-icon-earth
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-check"></span>
-		&nbsp;multisite-icon-check
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-file"></span>
-		&nbsp;multisite-icon-file
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-newspaper"></span>
-		&nbsp;multisite-icon-newspaper
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-calendar"></span>
-		&nbsp;multisite-icon-calendar
-	</span>
-	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-book"></span>
-		&nbsp;multisite-icon-book
+		<span aria-hidden="true" class="multisite-icon-group"></span>
+		&nbsp;multisite-icon-group
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-edit"></span>
 		&nbsp;multisite-icon-edit
 	</span>
 	<span class="box1">
-		<span aria-hidden="true" class="multisite-icon-group"></span>
-		&nbsp;multisite-icon-group
+		<span aria-hidden="true" class="multisite-icon-book"></span>
+		&nbsp;multisite-icon-book
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-calendar"></span>
+		&nbsp;multisite-icon-calendar
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-newspaper"></span>
+		&nbsp;multisite-icon-newspaper
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-file"></span>
+		&nbsp;multisite-icon-file
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-check"></span>
+		&nbsp;multisite-icon-check
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-earth"></span>
+		&nbsp;multisite-icon-earth
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-link"></span>
+		&nbsp;multisite-icon-link
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-question"></span>
+		&nbsp;multisite-icon-question
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-feed"></span>
+		&nbsp;multisite-icon-feed
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-megaphone"></span>
+		&nbsp;multisite-icon-megaphone
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-paperplane"></span>
+		&nbsp;multisite-icon-paperplane
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-archive"></span>
+		&nbsp;multisite-icon-archive
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-pictures"></span>
+		&nbsp;multisite-icon-pictures
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-language"></span>
+		&nbsp;multisite-icon-language
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-publish"></span>
+		&nbsp;multisite-icon-publish
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-code"></span>
+		&nbsp;multisite-icon-code
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-directions"></span>
+		&nbsp;multisite-icon-directions
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-mail"></span>
+		&nbsp;multisite-icon-mail
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-light-bulb"></span>
+		&nbsp;multisite-icon-light-bulb
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-share"></span>
+		&nbsp;multisite-icon-share
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-thumbs-up"></span>
+		&nbsp;multisite-icon-thumbs-up
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-vcard"></span>
+		&nbsp;multisite-icon-vcard
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-flow-branch"></span>
+		&nbsp;multisite-icon-flow-branch
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-comments-alt"></span>
+		&nbsp;multisite-icon-comments-alt
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-cogs"></span>
+		&nbsp;multisite-icon-cogs
+	</span>
+	<span class="box1">
+		<span aria-hidden="true" class="multisite-icon-home"></span>
+		&nbsp;multisite-icon-home
 	</span>
 	<span class="box1">
 		<span aria-hidden="true" class="multisite-icon-reorder"></span>
